section class for desktop only

--- a/src/members/members.html
+++ b/src/members/members.html
@@ -1,6 +1,6 @@
 <template>
 
-    <section>
+    <section class.bind="members_section_class"
         <div class="${theme.rtltr}">
             <div class="row">
                 <div class="col-md-10 col-md-offset-2" style="padding-right:50px;">
