video in mobile to fit screen

--- a/src/videos/annotate-video.html
+++ b/src/videos/annotate-video.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="video-area" if.bind="!cuepoints_enabled">
-                <iframe src.bind="video_url" frameborder="0" width="640" height="390" allowfullscreen="x">
+                <iframe src.bind="video_url" frameborder="0" width.bind="video_width" height.bind="video_height" allowfullscreen="x">
                 </iframe>
                 <button if.bind="user.editing"
                         class="btn btn-primary btn-framed"
