--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -23,5 +23,8 @@
         </div>
         <div show.bind="false" class.bind="dummy"></div>
     </template>
+    <div show.bind="false" class.bind="move_to_triggered">
+
+    </div>
 
 </template>
