--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -33,7 +33,9 @@
         </div>
         <div class="row" css="direction:${story_dir};margin-left:-30px;">
             <div class="col-md-5">
-                <photo-strip if.bind="has_associated_photos" source.bind="source" id.bind="story_idx" action_key="Zoom2"
+                <photo-strip if.bind="has_associated_photos" source.bind="source"
+                             id.bind="story_idx" action_key="Zoom2"
+                             move_to.bind="move_to"
                     style="padding:0;" dir="ltr" settings.bind="{arrows:true, height:220}">
                 </photo-strip>
                 <div class="row" style="height:fit-content;font-size:150%;padding:12px;margin-top: 20px;">
