minor layout issues

--- a/src/resources/elements/edit-side-by-side.html
+++ b/src/resources/elements/edit-side-by-side.html
@@ -6,7 +6,7 @@
 
         </div>
         <div class="col-md-6" style="display:flex;flex-direction:column;">
-            <div class="big-story-panel fr-view">
+            <div class="big-story-panel ${theme.rtltr} fr-view">
                 <froala-editor id="my-editor" value.two-way="edited_str"
                     event-handlers.bind="{
                         contentChanged:content_changed,
