--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -102,7 +102,7 @@
                     </div>
                     <div if.bind="! user.editing" style="padding-right:15px;padding-top:8px;">
                         <div class="fr-view" dir="${story_dir}">
-                            <div class="big-story-panel ${theme.font_size}" style="position:relative;">
+                            <div class="big-story-panel ${theme.font_size} ${theme.rtltr}" style="position:relative;">
                                 <p class="${story_dir} ${highlight_on}">
                                     <render-story if.bind="highlightedHtml" html.bind="highlightedHtml"></render-story>
                                     <!--div class="page-control next" click.trigger="next_page($event, +1)"></div>
@@ -113,7 +113,7 @@
                     </div>
                     <div if.bind="user.editing" style="padding-right:15px;padding-top:8px;">
                         <div class="fr-view" dir="${story_dir}">
-                            <div class="big-story-panel ${theme.font_size}" style="position:relative;">
+                            <div class="big-story-panel ${theme.font_size} ${theme.rtltr}" style="position:relative;">
                                 <editable if.bind="user.editing"
                                     settings.bind="{show_date:false, class:'story-section', checkable: false}"
                                     story.bind="story">
