--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -30,7 +30,7 @@
                     </p>
                 </div>
             </div>
-            <div class="big-story-panel fr-view" if.bind="edit">
+            <div class="big-story-panel ${theme.rtltr} fr-view" if.bind="edit">
                 <froala-editor 
                     value.two-way="story_text"
                     event-handlers.bind="{
