--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -1,6 +1,6 @@
 <template>
     <require from="./full-size-photo.css"></require>
-    <div id="full-size-photo"  class="slide unselectable" click.delegate="mark_face($event)" id="full-size-photo"
+    <div id="full-size-photo"  class="slide unselectable" click.delegate="mark_face($event)" style="margin-left:0;"
         fullscreenchange.delegate="fullscreen_change($event)" interact-draggable.bind="theme.interact_setting"
         interact-dragmove.delegate="drag_move_photo($event)">
         <div style="display:flex;flex-direction:row-reverse;">
@@ -72,7 +72,7 @@
                     </span>
                 </button>
             </div>
-            <div style="display:flex;flex-direction:column;width:32px;">
+            <div id="full-size-photo-toolbar">
                 <help if.bind="!user.editing" topic="annnotated-photo" position="bottom" class="side-tool help">
                 </help>
                 <help if.bind="user.editing" topic="annnotated-photo-editing" position="bottom" class="side-tool help">
