--- a/src/admin/customize.html
+++ b/src/admin/customize.html
@@ -158,6 +158,13 @@
                         </button>
                     </div>
                     <div style="margin-bottom:5px;">
+                        <button repeat.for="eg of expose_gallery_options" style="margin-left:8px;width:200px;"
+                            class="btn btn-${eg==expose_gallery_option ? 'primary' : 'default'} customization"
+                            click.delegate="expose_gallery_option_selected(eg)">
+                            <span style="font-weight:bolder">${eg & t}</span>
+                        </button>
+                    </div>
+                    <div style="margin-bottom:5px;">
                         <label style="margin-left:8px;width:200px;">
                             ${'admin.promoted-story-expiration' & t}
                         </label>
