add/edit topics improved

--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -17,7 +17,7 @@
                                     ${'photos.select-photos' & t}
                                 </label>
                                 <div>
-                                    <input style="display:none" type="file" multiple id="photos" accept="image/*"
+                                    <input style="display:none" type="file" multiple id="photos" accept="image/jpeg,image/jpg,image/png,image/webp"
                                         files.bind="photos">
                                 </div>
                             </div>
