doc details from story list

--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -108,8 +108,9 @@
                                         </audio>
                                     </div>
                                     <editable
-                                        settings.bind="{show_author:true, show_date:false, class:'story-section', checkable: true, confirmable: params.approval_state.id==2 }"
+                                        settings.bind="{show_author:true, show_date:false, class:'story-section', checkable: true, confirmable: params.approval_state.id==2, has_details: used_for==9 }"
                                         story.bind="story"
+                                        view_details.delegate="view_details(story, $event)"
                                         change.delegate="toggle_story_selection(story, $event, $index)"
                                         confirm.delegate="approve_story(story, $event)"
                                         info_title.bind="story.name" info_content.bind="story.topics"
