--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -22,7 +22,7 @@
             </button>
         </div>
         <div class="row">
-            <div class="col-md-7" style="display:flex;flex-direction:column;margin-top:16px;" id="photo-box">
+            <div class="col-md-7" style="display:flex;flex-direction:column;margin-top:16px;padding-left:0;" id="photo-box">
                 <img src.bind="photo_src" width="${photo_width}" click.trigger="open_full_size_photo()" />
                 <div style="margin-left:15px;margin-right:15px;display:flex;flex-direction:column;">
                     <span>
