--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -105,11 +105,11 @@
                 </div>
                 <div class="col-md-6 col-sm-12 fr-view life-summary" style="margin-bottom:20px;padding-left:20px;padding-bottom:10px;"
                      ref="life_summary_box1"
-                    if.bind="story_0.story_text == '' && ! user.privileges.EDITOR && ! user.editing">
+                    if.bind="story_0 && story_0.story_text == '' && ! user.privileges.EDITOR && ! user.editing">
                 </div>
                 <div class="col-md-6 col-sm-12 fr-view life-summary has-life"
                      ref="life_summary_box"
-                     if.bind="(user.privileges.EDITOR || story_0.story_text != '') && ! user.editing">
+                     if.bind="(user.privileges.EDITOR || story_0 &&  story_0.story_text != '') && ! user.editing">
                     <h4 style="margin-top:16px;margin-bottom:0px;color:gray;">
                         ${'members.life-summary' & t} ${member_info.first_name}
                     </h4>
@@ -149,7 +149,8 @@
                 show.bind="member.member_stories.length > 1 && ! (user.editing || life_summary_expanded)"
                 css="margin-left:-28px;margin-right:0px;"
                 interact-draggable.bind="theme.interact_setting" interact-dragend.delegate="shift_stories($event)" dir="rtl">
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 story-box" css="float:${theme.same_dir};height:${story_box_height}px;padding-right:8px;" click.trigger="goto_story_page(story_1)">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 story-box" css="float:${theme.same_dir};height:${story_box_height}px;padding-right:8px;" 
+                    click.trigger="goto_story_page(story_1)">
                     <div class="member-story-header" show.bind="story_1.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4  ${story_1.dir}>
                             <span class="name" innerhtml.bind="story_1.name"></span>
