--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -131,5 +131,6 @@
                 </div>
             </div>
         </form>
+        <div show.bind="stories_base_changed"></div>
     </div>
 </template>
