--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -208,6 +208,6 @@
         </div>
     </div>
     <div show.bind="false">
-        ${stories_base}
+        ${stories_base_changed}
     </div>
 </template>
