--- a/src/members/config-member-stories.html
+++ b/src/members/config-member-stories.html
@@ -1,13 +1,14 @@
 <template>
     <ux-dialog style="width:400px;height:100%;background-color:lightgray;padding:10px;direction:rtl;">
         <ux-dialog-header>
-            <h2>${member_stories.lst.length} ${'members.more-stories' & t}</h2>
+            <h2>${member_stories.lst.length-1} ${'members.more-stories' & t}</h2>
         </ux-dialog-header>  
         <ux-dialog-body>
             <div class="input-groupx">
                 <search-input value.bind="filter" 
-                    placeholder="members.filter" height="38"
-                    help_topic="members-help"></search-input>
+                    placeholder="enter-search-words" height="38"
+                    help_topic="member-stories-help">
+                </search-input>
             </div>
             <div if.bind="orig_story_types.size > 1" style="margin-top:12px;">
                 <button repeat.for="styp of story_type_arr"
