adapt config member stories to mobile

--- a/src/members/config-member-stories.html
+++ b/src/members/config-member-stories.html
@@ -1,5 +1,5 @@
 <template>
-    <ux-dialog style="width:400px;height:100%;background-color:lightgray;padding:10px;direction:rtl;">
+    <ux-dialog class="config-member-stories ${theme.rtltr}">
         <ux-dialog-header>
             <h2>${member_stories.lst.length-1} ${'members.more-stories' & t}</h2>
         </ux-dialog-header>  
