--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -27,7 +27,7 @@
                                 click.delegate="toggle_sign(item.option, $event)">
                             </i>
                             <i class="far fa-times-circle tool ${highlight_unselectors}" t="[title]multi-select.unselect"
-                                css="margin-left:${item.first ? 0 : settings.can_set_sign ? 40 : settings.can_group ? 20 : 0}px"
+                                css="margin-left:${on_off_button_margin(item.first)}px"
                                 click.delegate="unselect_item(item, $index)">
                             </i>
                             <i class="user.advanced_user && far fa-exchange-alt tool" t="[title]multi-select.change-group"
