keep aspect ratio of full screen

--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -131,6 +131,6 @@
         </div>
     </div>
     <div show.bind="false" class.bind="face_moved"></div>
-    </div>
+    <div show.bind="false" class.bind="force_calc_percents"></div>
 
 </template>
