--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -125,7 +125,8 @@
                 <div class="col-md-4 col-sm-12" if.bind="theme.is_desktop || editing_filters" id="story-filters"
                     css="height:${panel_height}px;overflow:auto;">
                     <button class="btn btn-basic btn-framed" click.delegate="init_params(true)"
-                            style="margin-right:-16px;margin-left:-16px;">
+                        if.bind="is_filtered"
+                        style="margin-right:-16px;margin-left:-16px;">
                         ${'stories.clear-all-filters' & t}
                     </button>
                     <div class="row" style="position:relative;" 
