--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <title>Stories</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="HWlQ64YZv4Qp97_JanEUUJl58eED5bcUjA3RPSL13Dk" />
     <link rel="stylesheet" href="fontawesome/css/all.css">
 </head>
 
