small steps in cuepoints

--- a/src/videos/annotate-video.html
+++ b/src/videos/annotate-video.html
@@ -136,7 +136,9 @@
                         <tbody>
                         <tr repeat.for="cue of cue_points">
                             <td>
-                                ${cue.time | formatTime}
+                                <span style="width:60px">${cue.time | formatTime}</span>
+                                <i class="fa fa-play fa-xs" if.bind="user.editing && cue.is_current" click.delegate="step(cue, +1)" style="margin-right:4px"></i>
+                                <i class="fa fa-play fa-xs fa-rotate-180" if.bind="user.editing && cue.is_current" click.delegate="step(cue, -1)"></i>
                                 <i class="${cue.is_current ? 'fas' : 'far'} fa-circle" click.delegate="jump_to_cue(cue)"
                                    style="float:left;margin-top:4px;cursor:pointer;"></i>
                             </td>
