modify system terms fixed

--- a/src/admin/customize.html
+++ b/src/admin/customize.html
@@ -57,7 +57,7 @@
                     <h3 style="margin-right:-15px;margin-left:-15px;">${'user.customize-dictionary' & t}</h3>
                 </div>
                 <div class="row multi-select-div">
-                    <multi-select options.bind="key_value_list" settings.bind="options_settings" category="topic"
+                    <multi-select options.bind="key_value_list" settings.bind="options_settings" category="locale"
                         name-changed.delegate="dic_item_changed($event)" place_holder_text="user.enter-text-to-replace">
                     </multi-select>
                 </div>
