--- a/src/user/make_qrcode.html
+++ b/src/user/make_qrcode.html
@@ -5,7 +5,7 @@
         </ux-dialog-header>
         <ux-dialog-body>
             <form class="form-horizontal" role="form">
-                <div class="form-group">
+                <div if.bind="user.privileges.DEVELOPER" class="form-group">
                     <span>url: ${url}</span>
                 </div>
                 <div class="form-group">
