--- a/src/user/make_qrcode.html
+++ b/src/user/make_qrcode.html
@@ -9,7 +9,8 @@
                     <span>url: ${url}</span>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="${name_placeholder}" value.bind="qrname">
+                    <input type="text" class="form-control" placeholder="${name_placeholder}" 
+                        keypress.trigger="keep_only_valid_chars($event)" value.bind="qrname">
                 </div>
             </form>
         </ux-dialog-body>
